[package]
name = "opencv-dep-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#opencv = "0.76.4"

[dependencies.opencv]
version = "0.76.4"
package = 'opencv'
default-features = false
features = ['videoio', 'imgproc', 'highgui']
optional = false

